--- a/suaLista.html
+++ b/suaLista.html
@@ -16,15 +16,15 @@
                 <li><a href="./ordemcronologica.html">Ordem Cronológica</a></li>
                 <li><a href="./ordemLancamento.html">Ordem Lançamento</a></li>
                 <li><a href="./curiosidades.html">Curiosidades</a></li>
-                <li><a href="./suaLista.html">Sua Lista</a></li>
+                <li><a href="./curiosidades.html">Sua Lista</a></li>
             </ul>
         </div>
         <div class="search">
             <input placeholder="Search Someting" type="text"/>
          </div>
     </header>
-    <h1>Universo Estendido da DC</h1>
-    <p>O DCEU começou com o filme Man of Steel (2013), uma reinicialização da série de filmes do Superman, seguido por Batman v Superman: Dawn of Justice (2016), que serviu como uma reinicialização da série de filmes do Batman. Esses filmes foram seguidos por mais de uma dúzia de filmes, e foi expandido para incluir séries de televisão para o serviço de streaming HBO Max em 2022, começando com Peacemaker. Após a reestruturação da DC Studios e a nomeação de James Gunn e Peter Safran em 2022, a franquia chegará ao seu derradeiro fim com o lançamento de Aquaman 2: O Reino Perdido e em 2025 será substituida pelo DCU, um novo universo compartilhado dos peronagens da DC.</p>
+    <h1>Sua Lista</h1>
+    
     
 </body>
 </html>
