--- a/ordemCronologica.html
+++ b/ordemCronologica.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmes DCEU</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header class="mainMenu">
-        <div class="logo">
-            <img src="./assets/DC-Comics-Logo.png">
-        </div>
-        <div class="options">
-            <ul>
-                <li><a href="./index.html">Início</a></li>
-                <li><a href="./ordemcronologica.html">Ordem Cronológica</a></li>
-                <li><a href="./ordemLancamento.html">Ordem Lançamento</a></li>
-                <li><a href="./curiosidades.html">Curiosidades</a></li>
-                <li><a href="./suaLista.html">Sua Lista</a></li>
-            </ul>
-        </div>
-        <div class="search">
-            <input placeholder="Search Someting" type="text"/>
-         </div>
-    </header>
+        <header class="header-1">
+            <div class="logo">
+                <img src="./assets/logo-dc.jpg">
+            </div>
+        </header>
+        <header class="header-2">
+             <div class="menu">
+                <ul>
+                    <li><a href="./index.html">Início</a></li>
+                    <li><a href="./ordemcronologica.html">Ordem Cronológica</a></li>
+                    <li><a href="./ordemLancamento.html">Ordem Lançamento</a></li>
+                    <li><a href="./curiosidades.html">Curiosidades</a></li>
+                    <li><a href="./suaLista.html">Sua Lista</a></li>
+                </ul>
+            </div>
+        </header>
     
     <section>
         <div>
-            <h1>Ordem Cronológica</h1>
-            <ul class="games-list">
+            <h2>Ordem Cronológica</h2>
+            <ul class="film-list">
                 <li>
                     <a 
                     target="_blank"
