--- a/index.html
+++ b/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmes DCEU</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header class="header-1">
+    <header class="header">
         <div class="logo">
-            <img src="./assets/logo-dc.jpg">
+            <img src="./assets/DC_Comics_logo.png">
         </div>
-    </header>
-    <header class="header-2">
-         <div class="menu">
-            <ul>
-                <li><a href="./index.html">Início</a></li>
-                <li><a href="./ordemcronologica.html">Ordem Cronológica</a></li>
-                <li><a href="./ordemLancamento.html">Ordem Lançamento</a></li>
-                <li><a href="./curiosidades.html">Curiosidades</a></li>
-                <li><a href="./suaLista.html">Sua Lista</a></li>
+        <nav>
+            <ul class="menu">
+                <li><a href="./index.html">INÍCIO</a></li>
+                <li><a href="./comoAssistir.html">COMO ASSISTIR</a></li>
+                <li><a href="./curiosidades.html">CURIOSIDADES</a></li>
+                <li><a href="./suaLista.html">SUA LISTA</a></li>
             </ul>
-        </div>
-        
+        </nav>
     </header>
-    <h1>Universo Estendido da DC</h1>
-    <p>O DCEU começou com o filme Man of Steel (2013), uma reinicialização da série de filmes do Superman, seguido por Batman v Superman: Dawn of Justice (2016), que serviu como uma reinicialização da série de filmes do Batman. Esses filmes foram seguidos por mais de uma dúzia de filmes, e foi expandido para incluir séries de televisão para o serviço de streaming HBO Max em 2022, começando com Peacemaker. Após a reestruturação da DC Studios e a nomeação de James Gunn e Peter Safran em 2022, a franquia chegará ao seu derradeiro fim com o lançamento de Aquaman 2: O Reino Perdido e em 2025 será substituida pelo DCU, um novo universo compartilhado dos peronagens da DC.</p>
-    
+    <main class="tela-principal">
+        <div class="apresentacao">
+            <h1>DCEU: Universo Estendido da DC</h1>
+            <p>O DCEU começou com o filme Man of Steel (2013), uma reinicialização da série de filmes do Superman,
+                seguido
+                por Batman v Superman: Dawn of Justice (2016), que serviu como uma reinicialização da série de filmes do
+                Batman. Esses filmes foram seguidos por mais de uma dúzia de filmes, e foi expandido para incluir séries
+                de
+                televisão para o serviço de streaming HBO Max em 2022, começando com Peacemaker. Após a reestruturação
+                da DC
+                Studios e a nomeação de James Gunn e Peter Safran em 2022, a franquia chegará ao seu derradeiro fim com
+                o
+                lançamento de Aquaman 2: O Reino Perdido e em 2025 será substituida pelo DCU, um novo universo
+                compartilhado
+                dos peronagens da DC.</p>
+        </div>
+    </main>
 </body>
+
 </html>
