--- a/suaLista.html
+++ b/suaLista.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmes DCEU</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header class="mainMenu">
+    <header class="header">
         <div class="logo">
-            <img src="./assets/DC-Comics-Logo.png">
+            <img src="./assets/DC_Comics_logo.png">
         </div>
-        <div class="options">
-            <ul>
-                <li><a href="./index.html">Início</a></li>
-                <li><a href="./ordemcronologica.html">Ordem Cronológica</a></li>
-                <li><a href="./ordemLancamento.html">Ordem Lançamento</a></li>
-                <li><a href="./curiosidades.html">Curiosidades</a></li>
-                <li><a href="./curiosidades.html">Sua Lista</a></li>
+        <nav>
+            <ul class="menu">
+                <li><a href="./index.html">INÍCIO</a></li>
+                <li><a href="./comoAssistir.html">COMO ASSISTIR</a></li>
+                <li><a href="./curiosidades.html">CURIOSIDADES</a></li>
+                <li><a href="./suaLista.html">SUA LISTA</a></li>
             </ul>
-        </div>
-        <div class="search">
-            <input placeholder="Search Someting" type="text"/>
-         </div>
+        </nav>
     </header>
     <h1>Sua Lista</h1>
-    
-    
+
+
 </body>
+
 </html>
